# UCAS-DeepLearning-2026-Spring

./: .gitignore  .pre-commit-config.yaml  Prompt.md  README.md  pyproject.toml  ruff.toml
docs/: 名词解释.md  深度学习简答题素材库.md  简答题.md  计算题2020.md  计算题2021.md  计算题2022.md  计算题2023.md  问答题.md
experiment1/: README.md  generate_ppt.py  generate_results.py  train_mnist.py  实验报告.md  实验汇报PPT提纲.md
experiment2/: README.md  generate_ppt.py  generate_results.py  train_vit.py  实验报告.md  实验汇报PPT提纲.md
experiment2/outputs_smoke/: metrics.json
experiment3/: README.md  generate_results.py  train_poetry.py  实验报告.md  实验汇报PPT提纲.md
experiment4/: README.md  generate_ppt.py  generate_results.py  train_nmt.py  实验报告.md  实验汇报PPT提纲.md
experiment7/: README.md  generate_ppt.py  generate_results.py  train_ptb_lm.py  实验报告.md  实验汇报PPT提纲.md
