[project]
name = "dl"
version = "0.1.0"
description = "Deep Learning course experiments (2026 Spring) — CNN, ViT, LSTM, Transformer"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "lx10ng" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "matplotlib>=3.10.9",
    "nvitop>=1.6.2",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.2",
    "python-pptx>=1.0.2",
    "sacrebleu>=2.6.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
